@@ -114,7 +114,7 @@ stringtok (Container &container, string const &in,
   }
 }
 string toLower(const string &upper);
-
+bool IpToU32(const string &str, u_int32_t *ip);
 string stringerror();
 string itoa(int i);
 
